hphp/hack/test/typecheck/async_hint3.php
<?hh

// Testing function
async function wrong_hint(): array<int> {
  throw new Exception();
}
